<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="150dp" />

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColorHint="#ffcdd2"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:textColorHint="#ffcdd2"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/loginButton"
            android:textColor="@color/colorAccent"
            android:background="#3f51b5"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/no_account_yet_create_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>