<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/add_item_rel_layout"
    android:theme="@style/OtherTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:text="@string/add_item_information"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_below="@id/toolbar"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_margin="10dp"
                android:entries="@array/category"
                android:id="@+id/item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <EditText
                android:layout_below="@id/item_category"
                android:inputType="text"
                android:maxLines="1"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:hint="@string/item_name_english"
                android:id="@+id/item_name_english"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <EditText
                android:layout_below="@id/item_name_english"
                android:inputType="text"
                android:maxLines="1"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:hint="@string/item_name_telugu"
                android:id="@+id/item_name_telugu"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:id="@+id/item_price_tag"
                android:layout_below="@id/item_name_telugu"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_currency_inr_black_18dp"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:hint="@string/item_price"
                    android:id="@+id/item_price"
                    android:layout_width="0dp"
                    android:layout_height="50dp" />
                <EditText
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:hint="@string/quantity"
                    android:id="@+id/item_quantity"
                    android:layout_width="0dp"
                    android:layout_height="50dp" />
                <Spinner
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:entries="@array/unit"
                    android:id="@+id/unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/offer_box"
                android:orientation="horizontal"
                android:layout_below="@id/item_price_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_weight="0.9"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:hint="@string/offer_in"
                    android:id="@+id/item_offer"
                    android:layout_width="0dp"
                    android:layout_height="50dp" />
                <CheckBox
                    android:id="@+id/offer_status"
                    android:layout_margin="10dp"
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_below="@id/offer_box"
                android:id="@+id/item_tag"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:text="@string/season_special"
                    android:layout_weight="0.5"
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"/>
                <CheckBox
                    android:id="@+id/Tag_status"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/set_item_image_text"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/set_item_image"
                android:layout_below="@id/item_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginEnd="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/add"
                android:id="@+id/item_image_add_button"
                android:layout_below="@id/set_item_image_text"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="30dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:id="@+id/item_image"
                android:layout_below="@id/set_item_image_text"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <ImageView
                android:layout_below="@id/item_tag"
                android:id="@+id/changeImage"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:src="@drawable/refresh"
                android:layout_toEndOf="@id/set_item_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </ScrollView>




</RelativeLayout>
